--- a/GOMRPath.Rmd
+++ b/GOMRPath.Rmd
@@ -2,6 +2,7 @@
 title: "GOM-Rpath"
 author: "Sarah Weisberg"
 date: "10/1/2020"
+bibliography: biblio.json
 output:
   html_document: default
   pdf_document: default
@@ -22,11 +23,13 @@ library(Rpath); library(data.table); library(Survdat); library(ggplot2); library
 
 ```
 
-## Intro text
-- building Rpath model of the Gulf of Maine (GOM)
-- parameterized for 1980-1985
-- using fall data
-- key data sources = bottom trawl survey, NOAA landings data (aggregated by statistical areas), stomach content analysis data for diet matrix, EMAX and NWACS models for species not collected in trawl.
+## Introduction
+This repository contains all of the background code for a mass-balanced food web model of the Gulf of Maine (GOM), which is built using the open-sourced mass balance algorithms of Rpath [@lucey2020]. The GOM model has been parameterized for the 1980-1985 time period, and fit to time series between 1985-2020. 52 functional groups are represented in the model, including 31 single fish species of commercial and/or ecological importance in the GOM. 
+
+Biomass estimates are derived primarily from NOAA's bottom trawl survey. For species and groups not well-covered by the survey -- such as lower trophic levels and marine mammals -- estimates are from the Energy Modeling and Analysis eXercise (EMAX) completed by the Northeast Fisheries Science Center (NEFSC) [@link2006]. The latter was a large-scale effort among dozens of researches to collate known biological parameter estimates for key species and groups across the Northeast US Continental Shelf Ecosystem and produced mass-balanced models of the GOM, Georges Bank (GB), Southern New England and the Mid-Atlantic Bight (MAB) -- efforts that have been foundational towards holistic understanding of the region. However, the EMAX models are highly aggregated, with 31 functional groups; more recent models have attempted to increase resolution and thereby allow for more nuanced questions to be asked and answered. The present model aims to do the same. Additionally, it is created alongside updated Rpath models of both GB and the MAB, in order to facilitate comparative analyses. In keeping with the GB fall model, biomass estimates are based on fall survey data. 
+As in the GB model, initial biological parameter estimates are derived from either the EMAX estimates or the more recent model by Buchheister et al. [-@buchheister]. Where appropriate, estimates were also pulled from Heymans (2001) or Dias et al. [@dias2019].
+
+- key data sources = bottom trawl survey, NOAA landings data (aggregated  stomach content analysis data for diet matrix, EMAX and NWACS models for species not collected in trawl.
 - I define GOM as bottom trawl strata 1220, 1240, 1260:1290, 1360:1400, 3560:3830 and statistical areas 500, 510, 512:515, 521 & 522 for landings analysis.
 - Code is frequently adapted from Sean Lucey's tools for survey analysis (cite) & Rpath model creating
 - Group structure within model designed to be able to be analogous to Georges Bank Rpath model
@@ -44,7 +47,7 @@ setnames(GOM.groups,'V1','RPATH')
 
 ## Compiling Biomass Data
 
-## Generating Biomass Estimates of Surveyed Species
+### Generating Biomass Estimates of Surveyed Species
 Load in NEFSC bottom trawl data ('survdat') from all time, shape file of survey strata ('strata') and species list for matching survey species codes with RPATH codes ('spp'). Note species of lower abundance / biomass will be aggregated into larger functional groups. Calculate mean stratified biomass for each RPATH group per year, using fall data only. Multiply by total area surveyed per year and divide by area swept per tow to generate swept area biomass. Divide by total survey area to arrive at biomass density estimate (t/km^2). Average over 1980-1985.
 
 ```{r survey biomass}
@@ -57,7 +60,7 @@ load('Survdat.RData')
 strata <- readOGR('speciescodesandstrata', 'strata')
 
 #Load species code list
-load("Species_codes.RData")
+load("speciescodesandstrata/Species_codes.RData")
 
 #Generate area table
 strat.area <- getarea(strata, 'STRATA')
@@ -171,7 +174,7 @@ kable(GOM.biomass.80s, booktabs = T, align = 'c')
 
 #Load data------------------------------------------------------------------
 #load commercial landings data 
-load("comland_meatwt_deflated_stat_areas.RData")
+load("~/Desktop/RPath-GOM-workshop/comland_meatwt_deflated_stat_areas.RData")
 
 #Load shape files and calculate total area
 stat.areas <- readOGR('gis','Statistical_Areas_2010')
@@ -233,4 +236,23 @@ NWACS[, QB.weight := Biomass * QB]
 NWACS[, new.QB := sum(QB.weight) / Rpath.bio, by = RPATH]
 ```
 
+```{r biomass accumluation}
+#RPATH GOM groups
+RPATH.GOM <- unique(total.biomass$RPATH, na.rm=true)
 
+#Write a loop to run lm for all RPATH groups, extract slope
+ba<-c()
+p<-c()
+for (i in 2:59){
+    lm<-lm(biomass.t_area~YEAR, data = subset(total.biomass, RPATH == RPATH.GOM[i]))
+    spF <- as.numeric(summary(lm)$fstatistic)
+    p[i] <- pf(spF[1], spF[2], spF[3], lower = F)
+    ba[i] <-as.numeric(lm[[1]][2])
+}
+
+ba<-cbind(RPATH.GOM,ba,p)
+```
+
+## References
+``` {references}
+````
