--- a/GOMRPath.Rmd
+++ b/GOMRPath.Rmd
@@ -36,10 +36,14 @@ As in the GB model, initial biological parameter estimates are derived from eith
 
 ## Generating list of functional groups
 -add more detail on how these groups were derived
+-Cut-off of biomass from trawl data to be considered as single species
+-Included if the biomass exceeded that threshold at any time during the time series
+-Groups in EMAX but not in trawl are included as well
+-Macrobenthos estimates are from EMAX?
 
 
 ```{r groups, echo=TRUE}
-GOM.groups <-as.data.table(c('Phytoplankton', 'Bacteria', 'Microzooplankton', 'GelZooplankton','LgCopepods', 'SmCopepods', 'Micronekton', 'Illex',' Loligo', 'OtherCephalopods','Macrobenthos','AmLobster','OceanPout','SmPelagics','SmFlatfishes','NShrimp','RiverHerring','AtlScallop','OtherPelagics','SummerFlounder','AtlHerring','Mesopelagics','SouthernDemersals','YTFlounder','Cod','Haddock','AmPlaice','AtlMackerel','Cusk','OtherDemersals','HMS','OtherSkates','RedHake','Barndoor Skate','Fourspot','SmoothDogfish','Pollock','Goosefish','SilverHake','WhiteHake','SpinyDogfish','Redfish','LittleSkate','SeaBirds','Windowpane','WinterFlounder','WitchFlounder','BlackSeaBass','Sharks','WinterSkate','Pinnipeds','BaleenWhales','Odontocetes'))
+GOM.groups <-as.data.table(c('Phytoplankton', 'Bacteria', 'Microzooplankton', 'GelZooplankton','LgCopepods', 'SmCopepods', 'Micronekton', 'Illex','Loligo', 'OtherCephalopods','Macrobenthos','AmLobster','OceanPout','SmPelagics','SmFlatfishes','NShrimp','OtherShrimps','RiverHerring','AtlScallop','OtherPelagics','AtlHerring','Mesopelagics','SouthernDemersals','YTFlounder','Cod','Haddock','AmPlaice','AtlMackerel','Cusk','OtherDemersals','HMS','OtherSkates','RedHake','Barndoor Skate','Fourspot','SmoothDogfish','Pollock','Goosefish','SilverHake','WhiteHake','SpinyDogfish','Redfish','LittleSkate','SeaBirds','Windowpane','WinterFlounder','WitchFlounder','BlackSeaBass','AtlHalibut','Butterfish','Sharks','WinterSkate','Pinnipeds','BaleenWhales','Odontocetes', 'Megabenthos'))
 setnames(GOM.groups,'V1','RPATH')
 
 ```
@@ -76,11 +80,17 @@ GOM.strat.area <- strat.area[STRATUM %in% c(1220, 1240, 1260:1290, 1360:1400, 35
 
 #Run stratification prep
 setnames(fall.GOM, 'EST_YEAR', 'YEAR')
-GOM.prep <- stratprep(fall.GOM, strat.area, strat.col = 'STRATUM', 
-                      area.col = 'Area')
+GOM.prep <- stratprep(fall.GOM, strat.area, strat.col = 'STRATUM', area.col ='Area')
 
 #Merge with RPATH names
+#Aggregate groups below 0.05 t/km^2 threshold
 spp <- spp[!duplicated(spp$SVSPP),]
+spp <- spp[RPATH == 'SummerFlounder', RPATH := 'OtherDemersals',]
+spp <- spp[RPATH == 'RedCrab', RPATH := 'Macrobenthos',]
+spp <- spp[RPATH == 'Scup', RPATH := 'OtherDemersals',]
+spp <- spp[RPATH == 'OffHake', RPATH := 'OtherDemersals',]
+spp <- spp[RPATH == 'Bluefish', RPATH := 'OtherPelagics',]
+spp <- spp[RPATH == 'AmShad', RPATH := 'SmPelagics',]
 GOM.prep<-merge(GOM.prep, spp[,list(SVSPP,COMNAME,RPATH,SCINAME)], by = 'SVSPP')
 
 #Calculate stratified means 
@@ -96,16 +106,81 @@ total.biomass <- sweptarea(GOM.prep, mean.biomass, strat.col = 'STRATUM', area.c
 total.biomass<-merge(total.biomass,spp[,list(SVSPP,RPATH,SCINAME,Fall.q)], by = 'SVSPP')
 
 #Calcuate biomass / area in mt
-total.biomass <- total.biomass[, biomass.t_area   :=    (tot.biomass*.001)/(Fall.q*GOM.strat.area)]
+total.biomass <- total.biomass[, biomass.t_area   := (tot.biomass*.001)/(Fall.q*GOM.strat.area)]
+
+#Sum multispecies groups
+#OtherDemersals
+OtherDemersals.Biomass<-total.biomass[RPATH == 'OtherDemersals', sum(biomass.t_area), by = YEAR]
+setnames(OtherDemersals.Biomass,'V1','Biomass')
+OtherDemersals.80s <- OtherDemersals.Biomass[YEAR %in% 1980:1985, mean(Biomass)]
+
+#SouthernDemersals
+SouthernDemersals.Biomass<-total.biomass[RPATH == 'SouthernDemersals', sum(biomass.t_area), by = YEAR]
+setnames(SouthernDemersals.Biomass,'V1','Biomass')
+SouthernDemersals.80s <- SouthernDemersals.Biomass[YEAR %in% 1980:1985, mean(Biomass)]
+
+#SmFlatfishes
+SmFlatfishes.Biomass<-total.biomass[RPATH == 'SmFlatfishes', sum(biomass.t_area), by = YEAR]
+setnames(SmFlatfishes.Biomass,'V1','Biomass')
+SmFlatFishes.80s <- SmFlatfishes.Biomass[YEAR %in% 1980:1985, mean(Biomass)]
+
+#OtherPelagics
+OtherPelagics.Biomass<-total.biomass[RPATH == 'OtherPelagics', sum(biomass.t_area), by = YEAR]
+setnames(OtherPelagics.Biomass,'V1','Biomass')
+OtherPelagics.80s <- OtherPelagics.Biomass[YEAR %in% 1980:1985, mean(Biomass)]
+
+#OtherCephalopods
+OtherCeph.Biomass<-total.biomass[RPATH == 'OtherCephalopods', sum(biomass.t_area), by = YEAR]
+setnames(OtherCeph.Biomass,'V1','Biomass')
+OtherCeph.80s <- OtherCeph.Biomass[YEAR %in% 1980:1985, mean(Biomass)]
+
+#Mesopelagics
+Mesopelagics.Biomass<-total.biomass[RPATH == 'Mesopelagics', sum(biomass.t_area), by = YEAR]
+setnames(Mesopelagics.Biomass,'V1','Biomass')
+Mesopelagics.80s <- Mesopelagics.Biomass[YEAR %in% 1980:1985, mean(Biomass)]
+
+#SmPelagics
+SmPelagics.Biomass<-total.biomass[RPATH == 'SmPelagics', sum(biomass.t_area), by = YEAR]
+setnames(SmPelagics.Biomass,'V1','Biomass')
+SmPelagics.80s <- SmPelagics.Biomass[YEAR %in% 1980:1985, mean(Biomass)]
+
+#OtherShrimps
+OtherShrimps <-total.biomass[RPATH == 'OtherShrimps']
+OtherShrimps.Biomass<-total.biomass[RPATH == 'OtherShrimps', sum(biomass.t_area), by = YEAR]
+setnames(OtherShrimps.Biomass,'V1','Biomass')
+OtherShrimps.80s <- OtherShrimps.Biomass[YEAR %in% 1980:1985, mean(Biomass)]
+
+#OtherSkates
+OtherSkates.Biomass<-total.biomass[RPATH == 'OtherSkates', sum(biomass.t_area), by = YEAR]
+setnames(OtherSkates.Biomass,'V1','Biomass')
+OtherSkates.80s <- OtherSkates.Biomass[YEAR %in% 1980:1985, mean(Biomass)]
 
 #Average over 1980-1985
 GOM.biomass.80s <- total.biomass[YEAR %in% 1980:1985, mean(biomass.t_area), by = RPATH]
 setnames(GOM.biomass.80s,'V1','Biomass')
+GOM.biomass.80s<-GOM.biomass.80s[RPATH == 'OtherDemersals', Biomass := OtherDemersals.80s,]
+GOM.biomass.80s<-GOM.biomass.80s[RPATH == 'Mesopelagics', Biomass := Mesopelagics.80s,]
+GOM.biomass.80s<-GOM.biomass.80s[RPATH == 'OtherCephalopods', Biomass := OtherCeph.80s,]
+GOM.biomass.80s<-GOM.biomass.80s[RPATH == 'OtherPelagics', Biomass := OtherPelagics.80s,]
+GOM.biomass.80s<-GOM.biomass.80s[RPATH == 'OtherShrimps', Biomass := OtherShrimps.80s,]
+GOM.biomass.80s<-GOM.biomass.80s[RPATH == 'OtherSkates', Biomass := OtherSkates.80s,]
+GOM.biomass.80s<-GOM.biomass.80s[RPATH == 'SmFlatfishes', Biomass := SmFlatFishes.80s,]
+GOM.biomass.80s<-GOM.biomass.80s[RPATH == 'SmPelagics', Biomass := SmPelagics.80s,]
+GOM.biomass.80s<-GOM.biomass.80s[RPATH == 'SouthernDemersals', Biomass := SouthernDemersals.80s,]
+
 
 kable(GOM.biomass.80s, booktabs = F, align = 'c')
 
 #Output results to csv
-#write.csv(GOM.biomass.80s, 'Mean Biomass_GoM_1980-85.csv')
+write.csv(GOM.biomass.80s, 'Mean Biomass_GoM_1980-85.csv')
+
+#Average over 2013-18
+GOM.biomass.2010s <- total.biomass[YEAR %in% 2013:2018, mean(biomass.t_area), by = RPATH]
+setnames(GOM.biomass.2010s,'V1','Biomass')
+
+
+#Output results to csv
+write.csv(GOM.biomass.2010s, 'Mean Biomass_GoM_2013-18.csv')
 ```
 
 ##Pulling biomass estimates from EMAX model
@@ -151,6 +226,7 @@ GOM.EMAX<-GOM.EMAX[RPATH == 'Macrobenthos', Biomass:=BenthosBiomass,]
 #Remove groups not included in Rpath model
 GOM.EMAX<- GOM.EMAX[RPATH %notin% c('Larval-juv fish- all','Shrimp et al.','Mega','Pelagics','Demersals','Discard','Detritus-POC','Fishery'),]
 GOM.EMAX<-unique(GOM.EMAX)
+
 #Merge survey and EMAX biomass estimates
 GOM.biomass.80s<-merge(GOM.groups,GOM.EMAX,by='RPATH', all=TRUE)
 GOM.biomass.80s<-GOM.biomass.80s[is.na(Biomass.y) , Biomass.y := Biomass.x]
